test/spec_vectors/load/fail/module_59.wat
(module (memory 1) (func $type-address-empty-in-store (i32.store (i32.load) (i32.const 1))))